--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,10 +1,19 @@
+body{
+margin:0;
+}
+
+*{
+box-sizing:border-box;
+}
+
 .sidebar{
-width:270px  ;
+width:270px;
 background:#1e293b;
 padding:20px;
 display:flex;
 flex-direction:column;
-height:100vh;
+min-height:100vh;
+flex-shrink:0;
 }
 
 .sidebar h2{
@@ -17,6 +26,8 @@ list-style:none;
 display:flex;
 flex-direction:column;
 gap:10px;
+padding:0;
+margin:0;
 }
 
 .sidebar li{
@@ -46,7 +57,6 @@ border-right:1px solid #ddd;
 body.light .sidebar li:hover{
 background:#f1f5f9;
 }
-
 
 /* Tablet */
 
@@ -85,3 +95,4 @@ width:30px;
 height:30px;
 object-fit:contain;
 }
+
